--- a/pom.xml
+++ b/pom.xml
@@ -14,49 +14,7 @@
 		<junit.version>4.12</junit.version>
 		<surefire.plugin.version>2.18.1</surefire.plugin.version>
 		<failsafe.plugin.version>2.18.1</failsafe.plugin.version>
-		<!--<jersey.client.version>2.22</jersey.client.version>
-		<jackson.version>2.8.8</jackson.version>
-		<httpclient.version>4.5.2</httpclient.version>
-		<logback.version>1.1.7</logback.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<slf4j.version>1.7.16</slf4j.version>
-		<compiler.plugin.version>3.3</compiler.plugin.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-		<java.version>1.8</java.version>
-		<javadoc.plugin.version>2.9.1</javadoc.plugin.version>
-		<diff.version>0.93.2</diff.version>
-		<joda.time.version>2.9.7</joda.time.version>
-		<powermock.version>1.6.2</powermock.version>
-
-		<hamcrest.version>1.3</hamcrest.version>
-		<jbehave.version>4.0.4</jbehave.version>
-		<build.helper.plugin.version>1.9.1</build.helper.plugin.version>
-		<commons.lang3.version>3.4</commons.lang3.version>
-		<commons.lang.version>2.6</commons.lang.version>
-		<maven.rpm.plugin.version>2.0.1</maven.rpm.plugin.version>
-		<javax.el.version>3.0.0</javax.el.version>
-        <lombok.version>1.16.6</lombok.version>-->
 	</properties>
-
-	<!--<repositories>
-		<repository>
-			<id>aol-cm-public</id>
-			<name>AOL CM Nexus</name>
-			<url>http://cmmaven.cm.aol.com:8081/nexus/content/groups/public/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>central</id>
-			<name>Maven Repository Central</name>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-	</repositories>
-	-->
 
 	<build>
 		<pluginManagement>
@@ -115,7 +73,7 @@
 						</dependency>
 					</dependencies>
 					<configuration>
-						<groups>com.aol.dmp.analytics.IntegrationTest</groups>
+						<groups>com.walmart.IntegrationTest</groups>
 						<includes>
 							<include>**/*.class</include>
 						</includes>
@@ -169,112 +127,6 @@
 			<scope>test</scope>
 		</dependency>
 
-        <!--<dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${commons.lang3.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>${commons.lang.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>${hamcrest.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>javax.el-api</artifactId>
-			<version>${javax.el.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.danielbechler</groupId>
-			<artifactId>java-object-diff</artifactId>
-			<version>${diff.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.tomakehurst</groupId>
-			<artifactId>wiremock</artifactId>
-			<version>2.0.6-beta</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>${jersey.client.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.connectors</groupId>
-			<artifactId>jersey-apache-connector</artifactId>
-			<version>${jersey.client.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>${joda.time.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-joda</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.jaxrs</groupId>
-			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
-		</dependency>-->
 	</dependencies>
 
-	<!--<distributionManagement>
-		<repository>
-			<id>aol-advertising-releases</id>
-			<name>AOL DRUID API Client : Releases</name>
-			<url>http://cmmaven.cm.aol.com:8081/nexus/content/repositories/aol-advertising/</url>
-		</repository>
-		<snapshotRepository>
-			<id>aol-advertising-snapshots</id>
-			<name>AOL DRUID API: Snapshots</name>
-			<url>http://cmmaven.cm.aol.com:8081/nexus/content/repositories/aol-advertising-snaps/</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<scm>
-		<connection>scm:ssh://git@stash.ops.aol.com:2022/dmp/druid-api-client.git</connection>
-	</scm>-->
 </project>
